--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
     <head>
         <link rel="stylesheet" href="assets/css/style.css">
         <script type="text/javascript"> (function(){ var surge = document.createElement('script'); surge.type = 'text/javascript'; surge.async = true; surge.src = 'http://www.usersurge.com/251900525/usersurge.js'; (document.getElementsByTagName('head')[0]||document.getElementsByTagName('body')[0]).appendChild(surge); })();</script>
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-97325740-1', 'auto');
+            ga('send', 'pageview');
+
+        </script>
     </head>
     <body>
         <div class="navbar">
@@ -16,7 +26,7 @@
                 <h1>Sleep Matters</h1>
             </div>
             <div class="content">
-                Circadian Rhythm Reasons: - Night is cold and helps conserve energy and prevents sleep - Predators only eat during the day when prey is awake. Zeitgebers - "time giver”, sets natural clock Cues for sleep Endogenous rhythm is roughly 24 hours. - Endogenous: internal system within Declarative memory, is performing tasks and remembering hard facts etc.
+                You probably don't get enough sleep. In fact, most people don't. 
             </div>
         </div>
         <div class="container-dark">
@@ -25,9 +35,19 @@
             </div>
             <div class="content">
                 Circadian Rhythm Reasons: - Night is cold and helps conserve energy and prevents sleep - Predators only eat during the day when prey is awake. Zeitgebers - "time giver”, sets natural clock Cues for sleep Endogenous rhythm is roughly 24 hours. - Endogenous: internal system within Declarative memory, is performing tasks and remembering hard facts etc.
+                <br>
+                Sleep stages wake nrem sws rem and things about each.
             </div>
         </div>
         <div class="container">
+            <div class="content-title">
+                <h1>Sleep Benefits</h1>
+            </div>
+            <div class="content">
+                Athletes, consolidates different types of memory in dif stages of sleep.
+            </div>
+        </div>
+         <div class="container-dark">
             <div class="content-title">
                 <h1>Sleep Deprivation</h1>
             </div>
@@ -42,6 +62,9 @@
             <div class="content">
                 Circadian Rhythm Reasons: - Night is cold and helps conserve energy and prevents sleep - Predators only eat during the day when prey is awake. Zeitgebers - "time giver”, sets natural clock Cues for sleep Endogenous rhythm is roughly 24 hours. - Endogenous: internal system within Declarative memory, is performing tasks and remembering hard facts etc.
             </div>
+        </div>
+        <div class="footer">
+
         </div>
     </body>
 </html>
