--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="assets/css/rangeslider.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
         <script src="assets/js/script.js"></script>
         <script type="text/javascript"> (function(){ var surge = document.createElement('script'); surge.type = 'text/javascript'; surge.async = true; surge.src = 'http://www.usersurge.com/251900525/usersurge.js'; (document.getElementsByTagName('head')[0]||document.getElementsByTagName('body')[0]).appendChild(surge); })();</script>
@@ -32,6 +33,20 @@
                     Sleep really matters.
                 </div>
                 <div class="landing-content">
+                    I sleep <span class="sleepvalue">___</span> hours a night.
+                    <div class="rangebar">
+                        <script>                
+                            function updateValue(value) {
+                                $('.sleepvalue').html(value);
+                            };
+                        </script>
+                    <input class="" onchange="updateValue(this.value);"
+                        type="range"
+                        min="2"                    // default 0
+                        max="10"                  // default 100
+                        step="1"                   // default 1
+                    >
+                    </div>
                 </div>
                 <div class="box">
                     <div class="interact">Benefits of Sleep</div>
@@ -77,26 +92,18 @@
                     Circadian Rhythm Reasons: - Night is cold and helps conserve energy and prevents sleep - Predators only eat during the day when prey is awake. Zeitgebers - "time giver”, sets natural clock Cues for sleep Endogenous rhythm is roughly 24 hours. - Endogenous: internal system within Declarative memory, is performing tasks and remembering hard facts etc.
                 </div>
             </div>
-            <div id="disqus_thread"></div>
-<script>
-
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-/*
-var disqus_config = function () {
-this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-*/
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://sleepbetter-1.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
         </div>
+        <div id="disqus_thread"></div>
+        <script>
+        (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://sleepbetter-1.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+        })();
+        </script>
+        <noscript>
+            Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
+        </noscript>
     </body>
 </html>
