Updted comments disign

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="#deprivation"><div class="nav-item">Deprivation</div></a>
             <a href="#memory"><div class="nav-item">Memory</div></a>
             <a href="">
-                <div class="nav-btn">How much do you sleep?</div>
+                <a href="#discuss"><div class="nav-btn">How much do you sleep?</div></a>
             </a>
         </div>
         <div class="main">
@@ -48,11 +48,11 @@
                     >
                     </div>
                 </div>
-                <div class="box">
+                <!--<div class="box">
                     <div class="interact">Benefits of Sleep</div>
                     <div class="interact">Sleep Deprivation</div>
                     <div class="interact">Sleep & Memory</div>
-                </div>
+                </div>-->
             </div>
             <a name="basics"></a>
             <div class="container-dark">
@@ -93,6 +93,7 @@
                 </div>
             </div>
         </div>
+        <a name="discuss"></a>
         <div id="disqus_thread"></div>
         <script>
         (function() { // DON'T EDIT BELOW THIS LINE
