--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
     <head>
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="stylesheet" href="assets/css/rangeslider.css">
+        <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
         <script src="assets/js/script.js"></script>
-        <script type="text/javascript"> (function(){ var surge = document.createElement('script'); surge.type = 'text/javascript'; surge.async = true; surge.src = 'http://www.usersurge.com/251900525/usersurge.js'; (document.getElementsByTagName('head')[0]||document.getElementsByTagName('body')[0]).appendChild(surge); })();</script>
+        <script type="text/javascript"> 
+            (function(){ 
+                var surge = document.createElement('script'); 
+                surge.type = 'text/javascript'; 
+                surge.async = true; 
+                surge.src = 'https://s3.amazonaws.com/usertrue-assets/usersurge.js'; 
+                (document.getElementsByTagName('head')[0]||document.getElementsByTagName('body')[0]).appendChild(surge); 
+                var username = 251900525;
+            })();
+        </script>
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
