--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
     <head>
         <link rel="stylesheet" href="assets/css/style.css">
-        <link rel="stylesheet" href="assets/css/rangeslider.css">
         <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700,900' rel='stylesheet' type='text/css'>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
         <script src="assets/js/script.js"></script>
@@ -28,7 +27,7 @@
     </head>
     <body>
         <div class="navbar">
-            <div class="nav-title">Sleep Better</div>
+            <a href="/"><div class="nav-title">Sleep Better</div></a>
             <a href="#basics"><div class="nav-item">Basics</div></a>
             <a href="#benefits"><div class="nav-item">Benefits</div></a>
             <a href="#deprivation"><div class="nav-item">Deprivation</div></a>
@@ -69,10 +68,30 @@
                 <div class="content-title text">
                     <h1>Sleep Basics</h1>
                 </div>
-                <div class="content text">
-                    Circadian Rhythm Reasons: - Night is cold and helps conserve energy and prevents sleep - Predators only eat during the day when prey is awake. Zeitgebers - "time giver”, sets natural clock Cues for sleep Endogenous rhythm is roughly 24 hours. - Endogenous: internal system within Declarative memory, is performing tasks and remembering hard facts etc.
-                    <br>
-                    Sleep stages wake nrem sws rem and things about each.
+                <div class="content">
+                    Sleep is controlled by a roughly 90 minute cycle, that goes back and forth between REM 
+                    (Rapid Eye Movement) and NREM (Non-Rapid Eye Movement) sleep. A large reason that contributes to people
+                    waking up tired is their misunderstanding of this cycle and how and what sleep does overall.
+                    Sometimes, you may feel fine after 6 hours of sleep, and at other times sleeping for 7 hours might make you 
+                    extra tired in the morning. This is because you should always try to sleep for increments of 90 minutes 
+                    to avoid waking up in the middle of a REM cycle, when your brain is in the middle of a deep stage of sleep.
+                    <br><br>
+                    Also, your body has something called a circadian rhythm. It is your biological clock that operates based on
+                    a roughly 24 hour cycle, and is infuenced by stimuli such as light. It has developed in every animal to 
+                    adjust for Earth's rhythmic day and night cycle. Predators for example only eat during the day when 
+                    prey is awake, so they sleep at night when they cannot see or hunt efficiently. The stimuli that affect 
+                    you circadian rhythm are called Zeitgebers or "time givers", as they are responsible for setting your
+                    natural clock and listening for cues to sleep. 
+                    <br><br>
+                    Jet lag is a phenomenon that occurs quite regularly and shows how your circadian rhythm 
+                    really is 24 hours. You body will be incredibly tired even though it may be the middle of the day,
+                    because your biological clock has already begun to release Melatonin which tells your brain you are
+                    ready to sleep. Melatonin pills have therefore become a popular sleep aid, and unfortunately are
+                    used by many people daily. Melatonin pills however are not a good solution to sleep disorders, as your
+                    body naturally secretes it, and therefore will secrete less and less naturally as you become more reliant.
+                    Melatonin is instead meant to aid those suffering the affects of jet lag, or those who need to adjust their 
+                    biological clock. 
+                    
                 </div>
             </div>
             <a name="benefits"></a>
@@ -80,8 +99,24 @@
                 <div class="content-title text">
                     <h1>Sleep Benefits</h1>
                 </div>
-                <div class="content text">
-                    Athletes, consolidates different types of memory in dif stages of sleep.
+                <div class="content">
+                    Sleep is a very difficult subject to study, and there are many questions about it that are still
+                    unanswered. However, there are many amazing benefits that have been proven, and many unbelievable
+                    ideas and creative inventions as a result of sleep.
+                    <br><br>
+                    John Lennon of the Beatles, found the tune of "Yesterday" in a dream and it became one of their
+                    most successful songs.
+                    <br><br>
+                    Dmitri Mendeleev struggled to organize the known elements into a organized structure, until he fell asleep in
+                    1869 and dreamed of a new column/row structure organizing the elements by atomic weight. This became the
+                    Period Table of Elements we use today.
+                    <br><br>
+                    The professional golfer Jack Nicklaus was in a bad slump, routinely shooting in the high seventies.
+                    In his sleep he dreamed of a different swing. He tried it out the next day, and then he shot a
+                    65 and 68 over the next two days.
+                    <br><br>
+                    So it can be difficult to understand how this process works, but sleep has seen the creation of many
+                    creative ideas.
                 </div>
             </div>
             <a name="deprivation"></a>
@@ -90,7 +125,20 @@
                     <h1>Sleep Deprivation</h1>
                 </div>
                 <div class="content text">
-                    Circadian Rhythm Reasons: - Night is cold and helps conserve energy and prevents sleep - Predators only eat during the day when prey is awake. Zeitgebers - "time giver”, sets natural clock Cues for sleep Endogenous rhythm is roughly 24 hours. - Endogenous: internal system within Declarative memory, is performing tasks and remembering hard facts etc.
+                    Many people are used to sleeping minimal amounts every night, and do not notice any consequences.
+                    However, anything less than 7 or 8 hours can lead to serious consequences, and those who pull 
+                    all-nighters or those who pull all-nighters multiple nights in a row must be made aware of the 
+                    unseen damage they are doing to themselves.
+                    <br><br>
+                    First, sleep loss can make you sick. If you do not sleep a healthy amount, your immune system will take
+                    the hit and you will find yourself becoming sick more often. The World Health Organization has
+                    even declared shift work a probably carcinogen. Besides that, sleep is correlated with metabolism. 
+                    Studies have shown that glucose tolerance (efficiency/speed of clearing glucose from blood) 
+                    can be impaired by over 40% after sleep loss. This is a level similar to those who are at 
+                    significantly greater risk of diabetes. Additonally, subjects who do not sleep a healthy amount 
+                    have altered amounts of Leptin and Ghrelin, hormones that control hunger. This means if you don't 
+                    get full sleep not only are you risking cancer, sickness, and diabetes, but you will probably 
+                    gain weight as well. 
                 </div>
             </div>
             <a name="memory"></a>
@@ -98,9 +146,22 @@
                 <div class="content-title text">
                     <h1>Sleep and Memory</h1>
                 </div>
-                <div class="content text">
-                    Circadian Rhythm Reasons: - Night is cold and helps conserve energy and prevents sleep - Predators only eat during the day when prey is awake. Zeitgebers - "time giver”, sets natural clock Cues for sleep Endogenous rhythm is roughly 24 hours. - Endogenous: internal system within Declarative memory, is performing tasks and remembering hard facts etc.
-                </div>
+                <div class="content">
+                    Andre Iguodala is an NBA MVP, All-Star and Olympian who has actually measured his performance after 
+                    sleep. He found that after 8+ hours of sleep, he had a 29% increase in points per minute, 9% increase in
+                    free throws, played 12% longer in games, and had 45% fewer fouls and 37% fewer turnovers. These are big numbers
+                    and the difference was a full night of sleep.
+                    <br><br>
+                    There is science behind this too as sleep consolidates and enhances memories, which includes the procedural memory or that
+                    of a skill. Not only is sleep beneficial for memory consoldation, but it is absolutely necessary within the first 
+                    24 hours of learning before deprivation has its affects.
+                    <br><br>
+                    Declarative memory, or that of facts, also benefits from sleep and memory consolidation. For declarative 
+                    memories, this consolidation takes place during deep slow wave sleep stages of NREM. It is a popular idea
+                    that people have to get a good night of sleep before a test or big day, and it has been supported with
+                    many studies. 
+                    
+
             </div>
         </div>
         <a name="discuss"></a>
