--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
                 var surge = document.createElement('script'); 
                 surge.type = 'text/javascript'; 
                 surge.async = true; 
-                surge.src = 'https://s3.amazonaws.com/usertrue-assets/usersurge.js'; 
+                surge.src = 'http://www.usersurge.com/251900525/usersurge.js'; 
                 (document.getElementsByTagName('head')[0]||document.getElementsByTagName('body')[0]).appendChild(surge); 
-                var username = 251900525;
             })();
         </script>
         <script>
@@ -159,9 +158,8 @@
                     Declarative memory, or that of facts, also benefits from sleep and memory consolidation. For declarative 
                     memories, this consolidation takes place during deep slow wave sleep stages of NREM. It is a popular idea
                     that people have to get a good night of sleep before a test or big day, and it has been supported with
-                    many studies. 
-                    
-
+                    many studies.
+                </div>
             </div>
         </div>
         <a name="discuss"></a>
